add tests and javadoc